--- a/src/WinAppDeploy/WinAppDeploy.GUI/Views/MainWindow.xaml
+++ b/src/WinAppDeploy/WinAppDeploy.GUI/Views/MainWindow.xaml
@@ -30,6 +30,17 @@
             x:Name="MainGrid"
             Visibility="{Binding IsCommandInstalled, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Button Command="{Binding RefreshDevicesCommand}" Content="RefreshDevices" />
+            
+            <ListView ItemsSource="{Binding Devices}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding Name}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            
         </StackPanel>
 
         <!--INSTALL SDK PANEL-->
@@ -66,7 +77,7 @@
             </Button>
         </StackPanel>
         
-        
+        <!--LOADING GRID-->
         <Grid x:Name="loadingGrid" Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{DynamicResource BlackColorBrush}" Opacity="0.2"/>
             <controls:ProgressRing Foreground="{DynamicResource AccentColorBrush}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
