--- a/src/WinAppDeploy.GUI/Views/DeviceDetailsView.xaml
+++ b/src/WinAppDeploy.GUI/Views/DeviceDetailsView.xaml
@@ -1,19 +1,31 @@
 ﻿<UserControl x:Class="WinAppDeploy.GUI.Views.DeviceDetailsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WinAppDeploy.GUI.Views"
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:converters="clr-namespace:WinAppDeploy.GUI.Converters"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
-             DataContext="{Binding DeviceDetailsViewModel, Source={StaticResource ViewModelLocator}}"
-             >
+             DataContext="{Binding DeviceDetailsViewModel, Source={StaticResource ViewModelLocator}}">
+
+    <UserControl.Resources>
+        <converters:NullToBooleanConverter x:Key="NullToBooleanConverter" />
+    </UserControl.Resources>
+
     <Grid>
-            <DataGrid ItemsSource="{Binding InstalledApps}" AutoGenerateColumns="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Package name" Binding="{Binding PackageName}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Architecture" Binding="{Binding Architecture}"></DataGridTextColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+        <StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <!--<Button Content="Install new app" Style="{StaticResource AccentedSquareButtonStyle}" />-->
+                <Button Content="Install new app" Margin="12" />
+                <Button Content="Update" IsEnabled="{Binding SelectedApp, Converter={StaticResource NullToBooleanConverter}}"  Margin="6, 12" />
+                <Button Content="Unistall" IsEnabled="{Binding SelectedApp, Converter={StaticResource NullToBooleanConverter}}"  Margin="6, 12" />
+            </StackPanel>
+            <DataGrid ItemsSource="{Binding InstalledApps}" AutoGenerateColumns="False" SelectedItem="{Binding SelectedApp, Mode=TwoWay}">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Package name" Binding="{Binding PackageName}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Architecture" Binding="{Binding Architecture}"></DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
     </Grid>
 </UserControl>
